chore: fixed alignment of registeredDiv in account page

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -922,6 +922,15 @@
       }
     }
   }
+  .registeredDiv {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 .votingBig {
